force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Active__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>