force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Amount_In_Group__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount_In_Group__c</fullName>
    <label>Amount In Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>