force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Auto__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto</label>
    <type>Checkbox</type>
</CustomField>