force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Description__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>