force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Filter_JSON__c</fullName>
    <label>Filter JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>