force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Is_Listview__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Is_Listview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this smart group has been saved as a list view</description>
    <label>Is Listview</label>
    <type>Checkbox</type>
</CustomField>