force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>