force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Last_Run_Error__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Run_Error__c</fullName>
    <label>Last Run Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>