force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Query_Builder_XML__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Query_Builder_XML__c</fullName>
    <label>Query Builder</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>