force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Type__c</fullName>
    <description>The record type that this group can be associated with</description>
    <inlineHelpText>The type of record that this group can be associated with</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>