force-app/main/default/objects/OneCRM__Group__c/fields/OneCRM__Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Unique_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>